# rust-dep-check

./: .gitignore  Cargo.toml  README.md
src/: main.rs
