[package]
name = "dep-check"
description = "A smol utility to evaluate the dependency versions and features for a given crates.io package"
repository = "https://github.com/ryankurte/rust-dep-check"
version = "0.1.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
crates-index = "0.12.0"
clap = "2.32.0"
semver = "0.9.0"
